--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -72,6 +72,12 @@
 			<artifactId>drools-mvel</artifactId>
 			<version>7.66.0.Final</version>
 		</dependency>
+		<dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <version>8.0.33</version> <!-- Or the latest stable version -->
+</dependency>
+
 
 	</dependencies>
 	<build>
