--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -60,6 +60,12 @@
 		</dependency>
 
 		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+</dependency>
+
+
+		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-core</artifactId>
 			<version>7.66.0.Final</version>
